# qp_gen

./: .env.example  .gitignore  Makefile  docker-compose.dev.yaml  docker-compose.yaml
broker-service/: .air.toml  Dockerfile  Dockerfile.dev  go.mod  go.sum  sqlc.yaml
broker-service/cmd/api/: authHandlers.go  authHandlers_test.go  handlers.go  helper.go  main.go  middelware.go  password.go  routes.go  userHandlers.go  utils.go
broker-service/internal/db/: migrate.go
broker-service/internal/db/query/: session.sql  users.sql
broker-service/internal/db/sqlc/: models.go  querier.go  session.sql.go  users.sql.go
broker-service/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
data-prep/: .gitignore  main.py  pdf_processor.py  pyproject.toml  sorting_topics.py
data-prep/question_paper_pattrens/: formative_assessment.yaml  summative_assessment.yaml
data-prep/raw_data_from_pdf/: 10th-science-ch6-control-and-corordination.json
data-prep/topic_sorted_data/: 10th-science-ch6-control-and-corordination.json
front-end/: package.json
front-end/src/: app.d.ts  hooks.server.ts
front-end/src/lib/apis/: axiosConfig.ts  types.ts
front-end/src/lib/utils/: session.ts
front-end/src/routes/: +page.svelte
front-end/src/routes/login/: +page.server.ts  +page.svelte
front-end/src/routes/logout/: +page.server.ts
front-end/src/routes/register/: +page.server.ts  +page.svelte
